--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,19 @@ dependencies:
   cupertino_icons: ^1.0.2
   hooks_riverpod: ^2.4.10
   flutter_hooks: ^0.20.5
-  firebase_core: ^2.25.5
-  cloud_firestore: ^4.15.6
+  firebase_core:
+  cloud_firestore: 
   uuid: 
+  internet_connection_checker: ^1.0.0+1
+  animated_text_kit:
+  firebase_auth:
+  google_fonts: ^6.2.0
+  intl: ^0.19.0
+  intl_phone_number_input: ^0.7.4
+  path_provider:
+  flutter_svg: ^2.0.10+1
+  shared_preferences: ^2.2.2
+  persistent_bottom_nav_bar: ^5.0.2 
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +61,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  custom_lint: ^0.6.2
+  custom_lint: 
   riverpod_lint: ^2.3.9
 
 # For information on the generic Dart part of this file, see the
@@ -66,9 +76,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
